--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "author": "Nacho Martin (nacho@limenius.com)",
   "license": "MIT",
   "dependencies": {
+    "ajv-i18n": "^1.5.0",
     "bootstrap-sass": "^3.3.7",
-    "liform-react": "^0.5.10",
+    "i18next": "^7.1.1",
+    "i18next-browser-languagedetector": "^1.0.1",
+    "i18next-xhr-backend": "^1.3.0",
+    "liform-react": "^0.5.13",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-i18next": "^2.2.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
